packages/infrastructure/root_package_apps/chat-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          image: krusonl.azurecr.io/chat-backend:sha-c4e1dbf # kpt-set: ${backend.image}
          ports:
            - containerPort: 8000
          resources: {}
