packages/infrastructure/root_package_apps/chat-backend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-backend
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /ws
      route:
        - destination:
            host: chat-backend
            port:
              number: 80
